[package]
name = "retry"
version = "0.1.0"
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-rt = "0.2.5"
actix-http = "0.2.10"
actix-web = {version = "1.0.7", features = ["ssl"] }
awc = "0.2.6"
futures = "0.1"
serde = "1.0.94"
failure = "0.1.5"
log = "0.4"
simple_logger = "1.3.0"

