[package]
name = "retry"
version = "0.1.0"
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]
edition = "2018"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "rabbit"
path = "src/rabbit.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-http = "1.0.1"
actix-web = "2.0.0"
awc = "1.0.1"
futures = "0.3.4"
serde = "1.0.94"
failure = "0.1.5"
log = "0.4"
simple_logger = "1.3.0"
lapin = "1.1.0"
anyhow = "1.0"
