[package]
name = "retry"
version = "0.1.0"
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]
edition = "2018"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "rabbit"
path = "src/rabbit.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "2.1.0"
actix-http = "2.2.0"
actix-web = "3.3.0"
awc = "1.0.1"
futures = "0.3.13"
serde = "1.0.94"
failure = "0.1.5"
log = "0.4"
simple_logger = "1.3.0"
lapin = "1.6.8"
anyhow = "1.0"
